[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]


[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
replit = "^3.2.4"
Flask = "^2.2.0"
openai = "^1.3.0"  # Latest stable version
requests = "^2.32.3"  # Latest stable version
typing-extensions = "^4.12.2"
idna = "^3.8"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

entrypoint = "main.py"

[interpreter]
command = ["python3", "main.py"]

[tool.poetry]
enable = false

[[ports]]
localPort = 8080
externalPort = 80
